# python-rel-import-lambda

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/function/sample_function/: index.py
test/app/function/sample_function/: test_main.py
