[tool.poetry]
name = "rel-import-lambda"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
